chore: fix docs meta and preview

--- a/docs/content/en/1.index.md
+++ b/docs/content/en/1.index.md
@@ -1,6 +1,7 @@
 ---
 category: Getting Started
 title: ℹ️ What is Vite?
+description:
 ---
 
 [Vite](https://vitejs.dev) (pronounced 'vit') is a no-bundler alternative to webpack made by Vue.js author, Evan You.\
