--- a/docs/content/en/2.advanced/1.modules.md
+++ b/docs/content/en/2.advanced/1.modules.md
@@ -12,7 +12,7 @@ Here are some tips:
 - Avoid depending on webpack features (like loaders) as much as possible
 - Avoid depending on vite plugins that do not have webpack alternative since we still use webpack for proudction build
 - Avoid directly depending on either webpack or vite, but if had to, consider supporting both
-- Extend nuxt build options like `build.alias` and `build.transpile` in your modules. This way nuxt can do bundler-level config based on generic options
+- Extend nuxt build options like `alias` and `build.transpile` in your modules. This way nuxt can do bundler-level config based on generic options
 
 ## Hooks
 
