Add Global CSS Support to Common Issues

--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -39,7 +39,28 @@ By default some known packages are excluded. Please reply to #56 to add more kno
 
 This is a race condition that server cache dir removes when reloading ([vitejs/vite/pull/2299](https://github.com/vitejs/vite/pull/2299))
 
-Currently using a fork of vite to address this issue. If you still have the issue, please add version and error in [#2](https://github.com/nuxt/vite/issues/2)
+## Global CSS Support
+
+@nuxtjs/style-resources does only work with Webpack config and is not supported by nuxt-vite.
+
+You must configure global CSS usage using `preprocessorOptions` option of CSS loader.
+
+***Example with SCSS***
+
+```js
+export default {
+  css: ["@/assets/scss/global.scss"],
+  vite: {
+    css: {
+      preprocessorOptions: {
+        scss: {
+          additionalData: '@import "@/assets/scss/global.scss";',
+        },
+      },
+    },
+  },
+}
+```
 
 ## Graphql support
 
