--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -39,6 +39,8 @@ By default some known packages are excluded. Please reply to #56 to add more kno
 
 This is a race condition that server cache dir removes when reloading ([vitejs/vite/pull/2299](https://github.com/vitejs/vite/pull/2299))
 
+Currently using a fork of vite to address this issue. If you still have the issue, please add version and error in [#2](https://github.com/nuxt/vite/issues/2)
+
 ## Global CSS Support
 
 @nuxtjs/style-resources does only work with Webpack config and is not supported by nuxt-vite.
