--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -43,9 +43,9 @@ Currently using a fork of vite to address this issue. If you still have the issu
 
 ## Global CSS Support
 
-@nuxtjs/style-resources does only work with Webpack config and is not supported by nuxt-vite.
+@nuxtjs/style-resources does only work with Webpack and is not supported by nuxt-vite.
 
-You must configure global CSS usage using `preprocessorOptions` option of CSS loader.
+You must configure global CSS import using `preprocessorOptions` option of CSS loader.
 
 ***Example with SCSS***
 
