--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -41,13 +41,13 @@ This is a race condition that server cache dir removes when reloading ([vitejs/v
 
 Currently using a fork of vite to address this issue. If you still have the issue, please add version and error in [#2](https://github.com/nuxt/vite/issues/2)
 
-## Global CSS Support
+## styleResources
 
-@nuxtjs/style-resources does only work with Webpack and is not supported by nuxt-vite.
+[styleResources](https://github.com/nuxt-community/style-resources-module/) depends on webpack and yet is not supported by nuxt-vite.
 
-You must configure global CSS import using `preprocessorOptions` option of CSS loader.
+You can configure global CSS import using `preprocessorOptions` option of CSS loader:
 
-***Example with SCSS***
+***Example with SCSS:***
 
 ```js
 export default {
