docs: add note for `@nuxtjs/composition-api` support

--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -76,3 +76,7 @@ export default {
     }
 }
 ```
+
+## Composition API suppport
+
+In addition to having `@nuxtjs/composition-api` installed and in your `buildModules`, you will need to install `@vue/composition-api` as a top level devDependency of your project.
