docs: add styleResources workaround (#75)

--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -41,6 +41,29 @@ This is a race condition that server cache dir removes when reloading ([vitejs/v
 
 Currently using a fork of vite to address this issue. If you still have the issue, please add version and error in [#2](https://github.com/nuxt/vite/issues/2)
 
+## styleResources
+
+[styleResources](https://github.com/nuxt-community/style-resources-module/) depends on webpack and yet is not supported by nuxt-vite.
+
+You can configure global CSS import using `preprocessorOptions` option of CSS loader:
+
+***Example with SCSS:***
+
+```js
+export default {
+  css: ["@/assets/scss/global.scss"],
+  vite: {
+    css: {
+      preprocessorOptions: {
+        scss: {
+          additionalData: '@import "@/assets/scss/global.scss";',
+        },
+      },
+    },
+  },
+}
+```
+
 ## Graphql support
 
 Currently there is no module support for handling gql files ([#31](https://github.com/nuxt/vite/issues/31)).
