docs: add brief note on new hook

--- a/docs/content/en/2.advanced/1.modules.md
+++ b/docs/content/en/2.advanced/1.modules.md
@@ -35,3 +35,11 @@ nuxt.hook('vite:extendConfig', (config, { isClient, isServer }) => { })
 Called two times. Once with resolved client config and once with resolved server config.
 Use it to apply client/server specific extension.
 
+### `vite:serverCreated`
+
+```ts
+nuxt.hook('vite:serverCreated', (server) => { })
+```
+
+Called one time with vite server once it has been created.
+
