--- a/docs/content/en/2.advanced/1.modules.md
+++ b/docs/content/en/2.advanced/1.modules.md
@@ -38,7 +38,7 @@ Use it to apply client/server specific extension.
 ### `vite:serverCreated`
 
 ```ts
-nuxt.hook('vite:serverCreated', ({ server }) => { })
+nuxt.hook('vite:serverCreated', (viteServer) => { })
 ```
 
 Called one time with vite server once it has been created.
