docs: fix assets example path

--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -111,7 +111,7 @@ Related to [#7](https://github.com/nuxt/vite/issues/7), errors can happen while 
 An example of breaking import:
 
 ```vue
-<img src="../assets/logo.svg">
+<img src="../static/img/logo.svg">
 ```
 
 Until this issue is fixed, you need to disable the SSR in development and refer to your images using the complete path from the root folder of your project.
