docs: common issues SSR assets imports (#111)

--- a/docs/content/en/3.misc/4.common-issues.md
+++ b/docs/content/en/3.misc/4.common-issues.md
@@ -103,3 +103,29 @@ export default {
 ## Composition API suppport
 
 In addition to having `@nuxtjs/composition-api` installed and in your `buildModules`, you will need to install `@vue/composition-api` as a top level devDependency of your project.
+
+## SSR Assets issues
+
+Related to [#7](https://github.com/nuxt/vite/issues/7), errors can happen while importing assets from your templates.
+
+An example of breaking import:
+
+```vue
+<img src="../static/img/logo.svg">
+```
+
+Until this issue is fixed, you need to disable the SSR in development and refer to your images using the complete path from the root folder of your project.
+
+An example of working import:
+
+```javascript
+// nuxt.config.js
+
+export default {
+  ssr: false
+}
+```
+
+```vue
+<img src="~/static/img/logo.svg" />
+```
