chore: update docs

--- a/docs/content/en/1.get-started/2.config.md
+++ b/docs/content/en/1.get-started/2.config.md
@@ -15,6 +15,8 @@ export default {
   ],
   vite: {
     /* options for vite */
+    // ssr: true // enable unstable server-side rendering for development (false by default)
+    // experimentWarning: false // hide experimental warning message (disabled by default for tests)
     vue: {
       /* options for vite-plugin-vue2 */
     },
