Updating pronunciation to 'veet'

--- a/docs/content/en/1.index.md
+++ b/docs/content/en/1.index.md
@@ -4,7 +4,7 @@ title: ℹ️ What is Vite?
 description: ''
 ---
 
-[Vite](https://vitejs.dev) (pronounced 'vit') is a no-bundler alternative to webpack made by Vue.js author, Evan You.\
+[Vite](https://vitejs.dev) (pronounced 'veet') is a no-bundler alternative to webpack made by Vue.js author, Evan You.\
 Using native ES modules, it provides **instant server start** and **lightning fast HMR** development experience.
 
 This package allows using Vite instead of Webpack during development with [Nuxt](https://nuxtjs.org/)
