--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -1,5 +1,5 @@
 ---
-title: ℹ️ What is Vite?
+title: Intro
 ---
 
 [Vite](https://vitejs.dev) (pronounced 'vit') is a no-bundler alternative to webpack made by Vue.js author, Evan You.
@@ -12,6 +12,6 @@ This package allows using Vite instead of Webpack during development with [Nuxt]
 **🧪 Vite mode is experimental and many nuxt modules are still incompatible. If you find a bug, please report via [issues](https://github.com/nuxt/vite/issues) with a minimal reproduction**
 :::
 
-- [👉 Quick Start](/get-started/usage)
+- [👉 Quick Start](/get-started/installation)
 
 - [👉 Learn More About Vite](https://vitejs.dev/guide/why.html)
