--- a/docs/pages/en/2.advanced/1.modules.md
+++ b/docs/pages/en/2.advanced/1.modules.md
@@ -1,4 +1,4 @@
-# 💡 Tips for module authors
+# Tips for module authors
 
 You can start adding experimental vite support to your modules, considering there are known issues and potential breaking changes.
 
