--- a/docs/pages/en/3.misc/4.common-issues.md
+++ b/docs/pages/en/3.misc/4.common-issues.md
@@ -1,4 +1,4 @@
-# 🐛 Common Issues
+# Common Issues
 
 💡 Take a look at [issues](https://github.com/nuxt/vite/issues) for known issues and workarounds
 
