docs: update docus (#145)

--- a/docs/pages/en/1.getting-started/1.installation.md
+++ b/docs/pages/en/1.getting-started/1.installation.md
@@ -1,9 +1,4 @@
----
-category: Getting Started
-description: ''
----
-
-# 🏎️ Quick Start
+# Quick Start
 
 Install `nuxt-vite`: (nuxt >= 2.15.0 is required)
 
