--- a/docs/pages/en/1.getting-started/2.config.md
+++ b/docs/pages/en/1.getting-started/2.config.md
@@ -1,9 +1,4 @@
----
-category: Getting Started
-description: ''
----
-
-# ⚙️ Config
+# Config
 
 You can pass Vite configurations and plugins into the `vite` entry of `nuxt.config`
 
