--- a/docs/pages/en/2.advanced/1.modules.md
+++ b/docs/pages/en/2.advanced/1.modules.md
@@ -1,9 +1,4 @@
----
-category: Advanced
-description: ''
----
-
-# 💡 Tips for module authors
+# Tips for module authors
 
 You can start adding experimental vite support to your modules, considering there are known issues and potential breaking changes.
 
@@ -42,4 +37,3 @@ nuxt.hook('vite:serverCreated', (viteServer) => { })
 ```
 
 Called one time with vite server once it has been created.
-
