--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -2,7 +2,7 @@
 title: Intro
 ---
 
-[Vite](https://vitejs.dev) (pronounced 'vit') is a no-bundler alternative to webpack made by Vue.js author, Evan You.
+[Vite](https://vitejs.dev) (pronounced 'veet') is a no-bundler alternative to webpack made by Vue.js author, Evan You.
 
 Using native ES modules, it provides **instant server start** and **lightning fast HMR** development experience.
 
