docs: add link to the #56 issue

--- a/docs/pages/en/3.misc/4.common-issues.md
+++ b/docs/pages/en/3.misc/4.common-issues.md
@@ -28,7 +28,7 @@ export default {
 }
 ```
 
-By default some known packages are excluded. Please reply to #56 to add more known problematic
+By default some known packages are excluded. Please reply to ([#56](https://github.com/nuxt/vite/issues/56)) to add more known problematic
 
 ## No such file or directory, rmdir node_modules/.vite/temp
 
