--- a/docs/content/en/1.getting-started/3.build.md
+++ b/docs/content/en/1.getting-started/3.build.md
@@ -1,6 +1,6 @@
 # Build
 
-From v0.2.0, we shipped experimental build support with Vite. It's disable by default and you can enable it by setting `vite.build: true` in config.
+From v0.2.0, we shipped experimental build support with Vite. It's disabled by default and you can enable it by setting `vite.build: true` in config.
 
 ```js
 // nuxt.config
